--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
     "web-vitals": "^2.1.4"
